Uses Java 17 as baseline (#356)
* Uses Java 17 as baseline

* Adjust test case to be compatible with Java 17
- synthetic methods for private field access are no longer generated due to nest-based access control (JEP 181)

* Updates OgnlRuntime to use Java 17 syntax